# velour

./: .env.example  .eslintrc.json  .gitignore  .prettierignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  vercel.json
services/api/: Dockerfile  README.md  alembic.ini  check_ai.py  pyproject.toml  requirements.txt  run.sh
services/api/alembic/: env.py
services/api/alembic/versions/: 001_create_users_table.py  002_create_wardrobe_items.py  003_create_image_assets.py  004_create_metadata_and_vector.py  005_create_recommendations.py  006_create_chat_history.py  007_create_preferences.py
services/api/app/: __init__.py  main.py
services/api/app/agent/: router.py  stylist.py
services/api/app/ai/: gateway.py  registry.py
services/api/app/api/: __init__.py  deps.py
services/api/app/core/: __init__.py  celery_app.py  config.py  events.py  exceptions.py  redis.py  security.py  storage.py
services/api/app/db/: __init__.py  base.py  session.py
services/api/app/middleware/: __init__.py  rate_limit.py  request_id.py
services/api/app/models/: __init__.py  chat.py  enums.py  image_asset.py  preferences.py  recommendation.py  user.py  wardrobe.py  wardrobe_metadata.py
services/api/app/schemas/: auth.py  (+7 more)
services/api/tests/: __init__.py  conftest.py  test_ai_gateway.py  test_auth.py  test_health.py  test_preferences_api.py  test_preferences_repository.py  test_preferences_service.py  test_storage.py  test_upload_api.py  test_users.py  test_vision_service.py  test_wardrobe_api.py  test_wardrobe_repository.py  test_wardrobe_service.py  test_worker.py
(+77 files in other folders)
