[tool.poetry]
name = "velour-api"
version = "0.1.0"
description = "Velour API — AI-powered wardrobe management and outfit recommendation service."
authors = ["Velour Team"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { version = "^0.32.0", extras = ["standard"] }
pydantic = { version = "^2.10.0", extras = ["email"] }
pydantic-settings = "^2.6.0"
sqlalchemy = { version = "^2.0.36", extras = ["asyncio"] }
asyncpg = "^0.30.0"
alembic = "^1.14.0"
redis = "^5.2.0"
celery = { version = "^5.4.0", extras = ["redis"] }
python-multipart = "^0.0.17"
httpx = "^0.28.0"
argon2-cffi = "^23.1.0"
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
slowapi = "^0.1.9"
supabase = "^2.10.0"
pillow = "^11.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.28.0"
ruff = "^0.8.0"
black = "^24.10.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
